--- a/src/View/Join.module.css
+++ b/src/View/Join.module.css
@@ -1,5 +1,5 @@
 .logo {
-    margin: 100px 0 70px;
+    margin: 6.25em 0 4.375em;
 }
 
 
@@ -9,34 +9,33 @@
     border-top: none;
 }
 
-
-.input-box {
+.input-box, .info-box {
     display: flex;
     flex-direction: column;
-    padding: 35px 35px 0 35px;
+    padding: 2.25em 2.25em 0 2.25em;
     color: #767676;
+}
+
+.input-box {
     width: 480px;
 }
 
 
 .info-box {
-    display: flex;
-    flex-direction: column;
-    padding: 0 35px 35px 35px;
-    margin-top: 50px;
-    color: #767676;
+    padding: 0 2.25em 2.25em 2.25em;
+    margin-top: 3.125em;
 }
 
 
 .input-box label,
 .info-box label {
-    margin: 12px 0 10px 0;
+    margin: 0.75em 0 0.625em 0;
 }
 
 
 .input-box input,
 .info-box input {
-    padding: 20px 16px;
+    padding: 1.25em 1em;
     border: 1px solid #C4C4C4;
     border-radius: 5px;
     width: 100%;
@@ -52,14 +51,14 @@
 
 .tab-box .buyer, 
 .tab-box .seller {
+    font-size: 1.125rem;
     flex: 1;
     background-color: #C4C4C4;
     border: 1px solid #C4C4C4;
     border-radius: 10px 10px 0 0;
     cursor: pointer;
-    font-size: 18px;
     font-weight: 600;
-    padding: 20px 0 18px;
+    padding: 1.11em 0 1em;
     text-align: center;
 }
 
@@ -73,7 +72,7 @@
 
 .id-box {
     position: relative;
-    margin-bottom: 24px;
+    margin-bottom: 1.5em;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -88,13 +87,13 @@
 
 
 .box span {
-    margin-top: 10px;
+    margin-top: 0.625em;
 }
 
 
 .valid {
-    margin-left: 12px;
-    padding: 16px 31px;
+    margin-left: 0.75em;
+    padding: 1em 2em;
     border-radius: 5px;
     background-color: #21BF48;
     border: none;
@@ -106,11 +105,6 @@
 
 .input-box input:focus {
     outline: none;
-}
-
-
-.input-box .id {
-    margin-bottom: 6px;
 }
 
 
@@ -134,7 +128,7 @@
 
 .phone-box {
     position: relative;
-    margin-bottom: 28px;
+    margin-bottom: 1.75em;
 }
 
 
@@ -153,7 +147,7 @@
 
 .phone-box input:nth-child(2), 
 .email-box span {
-    margin: 0 12px;
+    margin: 0 0.75em;
 }
 
 
@@ -179,7 +173,7 @@
 .dropdown ~ ul li {
     text-align: center;
     list-style: none;
-    padding: 10px 0;
+    padding: 0.625em 0;
 }
 
 
@@ -206,13 +200,13 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    margin: 34px 0;
+    margin: 2.125em 0;
 }
 
 
 .check-box .check {
     display: block;
-    margin-right: 10px;
+    margin-right: 0.625em;
 }
 
 
@@ -220,28 +214,22 @@
     cursor: pointer;
 }
 
-
-.join {
-    padding: 19px 206px;
+.join, .join-valid {
+    font-size: 1.125rem;
+    padding: 1em 11.44em;
+    margin-bottom: 6.11em;
     color: #fff;
-    font-size: 18px;
     font-weight: bold;
-    background-color: #C4C4C4;
     border-radius: 5px;
     cursor: pointer;
     border: none;
-    margin-bottom: 110px;
+}
+
+.join {
+    background-color: #C4C4C4;
 }
 
 
 .join-valid {
-    padding: 19px 206px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
     background-color: #21BF48;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    margin-bottom: 110px;
 }
