--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,13 +1,13 @@
 .container {
     background-color: #F2F2F2;
-    padding: 60px 320px;
+    padding: 3.75em 20em;
 }
 
 .link-box {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin-bottom: 1.875em;
 }
 
 .link-box span {
@@ -16,11 +16,11 @@
 
 .link-box span:not(:last-child)::after {
     content: '|';
-    margin: 0 14px;
+    margin: 0 0.875em;
 }
 
 .sns img {
-    margin-left: 14px;
+    margin-left: 0.875em;
     cursor: pointer;
 }
 
@@ -28,11 +28,11 @@
     display: flex;
     flex-direction: column;
     line-height: 24px;
-    margin-top: 30px;
+    margin-top: 1.875em;
     color: #767676;
 }
 
 .info span:nth-child(3):after {
     content: '| 통신판매업';
-    margin-left: 6px;
+    margin-left: 0.375em;
 }
