--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -37,7 +37,7 @@
 
 
 .container p {
-    margin: 60px 36px 32px;
+    margin: 3.75em 2.25em 2em;
 }
 
 
@@ -50,7 +50,7 @@
 
 
 .container h4 {
-    margin: 60px 0 40px;
+    margin: 3.75em 0 2.5em;
     text-align: center;
 } 
 
@@ -67,8 +67,8 @@
 
 
 .container div input:first-child {
-    margin-right: 10px;
-    font-size: 16px;
+    margin-right: 0.625em;
+    font-size: 1rem;
     border: 1px solid #c4c4c4;
     background-color: #fff;
     color: #767676;
@@ -77,7 +77,7 @@
 
 
 .container div input:last-child {
-    font-size: 16px;
+    font-size: 1rem;
     border: 1px solid #21BF48;
     background-color: #21BF48;
     color: #fff;
@@ -86,7 +86,7 @@
 
 
 .container article {
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 23px;
     display: flex;
     flex-direction: row;
@@ -95,7 +95,7 @@
     width: 150px;
     border: 1px solid #767676;
     border-radius: 5px;
-    margin: 44px auto 26px;
+    margin: 2.44em auto 1.44em;
 }
 
 
@@ -110,7 +110,7 @@
     background-color: inherit;
     width: 48px;
     height: 48px;
-    font-size: 32px;
+    font-size: 2rem;
     padding: 0;
 }
 
